# learn_server

./: .env  Cargo.toml
migrations/: 20250404140829_create_users_table.sql  20250405114501_create_users_table.sql  20250406090740_increase_team_table.sql  20250407115225_increase_groups_table.sql  20250407123631_update_column_properties.sql  20250407150612_update_column_properties2.0.sql  20250407152417_Add_association_between_group_and_team.sql  20250414130615_test1.sql
src/: db.rs  handlers.rs  main.rs  models.rs
