[package]
name = "test_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum ="0.8.3"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
argon2 = "0.5.3"
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }