[package]
name = "learn_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum ="0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
argon2 = "0.5.3"
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"