[package]
name = "learn_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
argon2 = { version = "0.5.3", features = ["std"] }
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
http = "1.3.1"


[dev-dependencies]
tower = { version = "0.5.2", features = ["full"] }
http-body-util = "0.1.3"
